# pytorch-lightning-template

./: .gitignore  pyproject.toml  pytest.ini  test_dinov3.py
configs/: default.yaml  test_config.yaml
configs/data/: chest_xray_binary.yaml  dinov3_chest_xray_multiclass.yaml
configs/model/: dinov3_base.yaml  dinov3_base_multiclass.yaml  simplenet.yaml
docs/: chest_xray_binary_dataset.md
references/: chest-xray-images-pytorch-step-by-step-acc-94.py
src/data_modules/: __init__.py  chest_xray_binary.py  chest_xray_multiclass.py  mnist.py
src/models/: __init__.py  dinov3_base.py
src/modules/: __init__.py  dinov3_base_module.py  mnist_module.py
src/utils/: cli.py
tests/: test_chest_xray_binary.py
