[project]
name = "pytorch-lightning-template"
version = "0.1.0"
description = "A template for simple deep learning projects using Lightning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autorootcwd>=1.0.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "modelscope>=1.33.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pydicom>=3.0.1",
    "seaborn>=0.13.2",
    "swanlab>=0.7.6",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
    "jsonargparse[signatures]>=4.43.0",
    "debugpy>=1.8.19",
    "opencv-python>=4.11.0.86",
    "timm>=1.0.24",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 120
select = [
    "I",  # isort
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
]
ignore = ["F401"]

[tool.pyright]
exclude = ["**/__pycache__", "data", "logs"]
typeCheckingMode = "off"
